<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preference_title_camera">
        <CheckBoxPreference
            android:key="@string/preference_key_camera_flash"
            android:title="@string/preference_title_camera_flash"
            android:checked="false" />
        <com.lpiem.apps.loupelec.utilities.customUiElement.NumberPickerDialogPreference
            android:key="@string/preference_key_zoom_controls_size"
            android:title="@string/preference_title_zoom_controls_size"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_title_ocr">
        <CheckBoxPreference
            android:key="@string/preference_key_ocr_toogle"
            android:title="@string/preference_title_ocr_toggle"
            android:enabled="true"
            android:checked="false"/>
        <CheckBoxPreference
            android:key="@string/preference_key_ocr_imgTxt"
            android:title="@string/preference_title_ocr_imgTxt"
            android:enabled="false"
            android:checked="true"/>
        <CheckBoxPreference
            android:key="@string/preference_key_ocr_txtOnly"
            android:title="@string/preference_title_ocr_txtOnly"
            android:enabled="false"
            android:checked="false"/>
        <com.lpiem.apps.loupelec.utilities.customUiElement.CustomListPreference
            android:key="@string/preference_key_ocr_languages"
            android:title="@string/preference_title_ocr_language"
            android:summary="%s"
            android:defaultValue="@string/preference_default_value_language"
            android:entries="@array/listLanguageEntries"
            android:entryValues="@array/listLanguageEntryValues"
            android:enabled="false"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_title_style">
        <com.lpiem.apps.loupelec.utilities.colorPicker.ColorPickerPreference
            android:key="@string/preference_key_activity_background"
            android:title="@string/preference_title_style_activity_background"
            android:summary="%s"
            android:defaultValue="@integer/COLOR_BLACK" />
        <com.lpiem.apps.loupelec.utilities.colorPicker.ColorPickerPreference
            android:key="@string/preference_key_button_background"
            android:title="@string/preference_title_style_button_background"
            android:summary="%s"
            android:defaultValue="@integer/COLOR_BLACK" />
        <com.lpiem.apps.loupelec.utilities.colorPicker.ColorPickerPreference
            android:key="@string/preference_key_font_color"
            android:title="@string/preference_title_style_font_color"
            android:summary="%s"
            android:defaultValue="@integer/COLOR_WHITE" />
        <com.lpiem.apps.loupelec.utilities.customUiElement.NumberPickerDialogPreference
            android:key="@string/preference_key_font_size"
            android:title="@string/preference_title_style_font_size"/>
        <CheckBoxPreference
            android:key="@string/preference_key_button_images"
            android:title="@string/preference_title_button_images"
            android:defaultValue="false"/>
        <com.lpiem.apps.loupelec.utilities.customUiElement.CustomListPreference
            android:key="@string/preference_key_button_list_color"
            android:title="@string/preference_title_button_list_color"
            android:summary="%s"
            android:defaultValue="@string/preference_default_value_button_color"
            android:entries="@array/listColorButtonEntries"
            android:entryValues="@array/listColorButtonEntryValues"
            android:enabled="false" />
    </PreferenceCategory>

</PreferenceScreen>