<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.lpiem.apps.loupelec.utilities.customUiElement.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_add_title"
        android:id="@+id/tv_add_keyword_dialog" />

    <com.lpiem.apps.loupelec.utilities.customUiElement.CustomEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_add_keyword_dialog" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.lpiem.apps.loupelec.utilities.customUiElement.CustomButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/validate"
            android:id="@+id/btn_validate_add_keyword_dialog" />
        <com.lpiem.apps.loupelec.utilities.customUiElement.CustomButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:id="@+id/btn_cancel_add_keyword_dialog" />
    </LinearLayout>
</LinearLayout>