<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context="com.lpiem.apps.loupelec.fragments.CameraFragment">

        <com.lpiem.apps.loupelec.utilities.camera.CameraPreview
            android:id="@+id/fl_camera_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerInParent="true"/>

        <com.lpiem.apps.loupelec.utilities.customUiElement.CustomButton
            android:id="@+id/btn_camera_capture"
            android:text="@string/camera_button_capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center_horizontal"
            android:visibility="gone"/>
        <com.lpiem.apps.loupelec.utilities.customUiElement.CustomImageButton
            android:id="@+id/imgbtn_camera_capture"
            android:text="@string/camera_button_capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center_horizontal"
            android:visibility="gone"
            app:imageName="ic_action_camera"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom|end">

            <com.lpiem.apps.loupelec.utilities.customUiElement.ZoomButton
                android:id="@+id/btn_camera_zoom_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera_button_less"/>
            <com.lpiem.apps.loupelec.utilities.customUiElement.ZoomButton
                android:id="@+id/btn_camera_zoom_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera_button_more"/>

        </LinearLayout>

        <com.lpiem.apps.loupelec.utilities.customUiElement.CustomButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_button_parameters"
            android:id="@+id/btn_camera_prefs"
            android:layout_alignParentBottom="true"
            android:layout_gravity="start|bottom"
            android:visibility="gone"/>
        <com.lpiem.apps.loupelec.utilities.customUiElement.CustomImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_button_parameters"
            android:id="@+id/imgbtn_camera_prefs"
            android:layout_alignParentBottom="true"
            android:layout_gravity="start|bottom"
            android:visibility="gone"
            app:imageName="ic_action_settings"/>

        <com.lpiem.apps.loupelec.utilities.customUiElement.CustomButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_button_gallery"
            android:id="@+id/btn_camera_gallery"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end|top"
            android:visibility="gone"/>
        <com.lpiem.apps.loupelec.utilities.customUiElement.CustomImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_button_gallery"
            android:id="@+id/imgbtn_camera_gallery"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end|top"
            android:visibility="gone"
            app:imageName="ic_action_picture"/>
</RelativeLayout>