<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:id="@+id/fl_detail_picture">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/iv_detail_picture"
        android:layout_gravity="center"
        android:contentDescription="@null"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/sv_detail_picture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true"
        android:visibility="gone">

        <com.lpiem.apps.loupelec.utilities.customUiElement.CustomTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/tv_detail_picture"
            android:singleLine="false" />

    </ScrollView>

    <com.lpiem.apps.loupelec.utilities.customUiElement.CustomButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/btn_detail_back"
        android:gravity="top"
        android:visibility="gone"/>
    <com.lpiem.apps.loupelec.utilities.customUiElement.CustomImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgbtn_detail_back"
        android:gravity="top"
        android:visibility="gone"
        app:imageName="ic_action_back"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal">

        <com.lpiem.apps.loupelec.utilities.customUiElement.CustomButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_button_edit"
            android:id="@+id/btn_detail_edit"
            android:visibility="gone"/>
        <com.lpiem.apps.loupelec.utilities.customUiElement.CustomImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgbtn_detail_edit"
            android:visibility="gone"
            app:imageName="ic_action_edit"/>

        <com.lpiem.apps.loupelec.utilities.customUiElement.CustomButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_detail_share"
            android:text="@string/detail_button_share"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:visibility="gone"/>
        <com.lpiem.apps.loupelec.utilities.customUiElement.CustomImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgbtn_detail_share"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:visibility="gone"
            app:imageName="ic_action_share"/>

        <com.lpiem.apps.loupelec.utilities.customUiElement.CustomButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_button_delete"
            android:id="@+id/btn_detail_delete"
            android:visibility="gone"/>
        <com.lpiem.apps.loupelec.utilities.customUiElement.CustomImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgbtn_detail_delete"
            android:visibility="gone"
            app:imageName="ic_action_discard"/>
    </LinearLayout>

</FrameLayout>